--- a/contact.html
+++ b/contact.html
@@ -76,15 +76,15 @@
         <h2 class="form-title">Send Us a Message</h2>
         <form action="https://formspree.io/f/mzzrywqr" method="post" id="property-contact">
           <div class="form-group">
-            <input type="text" id="contact-name" required>
+            <input type="text" id="contact-name" required name="name">
             <label for="contact-name">Your Name</label>
           </div>
           <div class="form-group">
-            <input type="email" id="contact-email" required>
+            <input type="email" id="contact-email" required name="email">
             <label for="contact-email">Email Address</label>
           </div>
           <div class="form-group">
-            <input type="tel" id="contact-phone" required>
+            <input type="tel" id="contact-phone" required name="number">
             <label for="contact-phone">Phone Number</label>
           </div>
           <div class="form-group">
