--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
             <label for="contact-phone">Phone Number</label>
           </div>
           <div class="form-group">
-            <select id="contact-subject" required>
+            <select id="contact-subject" required name="option">
               <option value="" disabled selected></option>
               <option>Property Inquiry</option>
               <option>Schedule a Viewing</option>
@@ -97,7 +97,7 @@
             <label for="contact-subject">Subject</label>
           </div>
           <div class="form-group">
-            <textarea id="contact-message" rows="5" required></textarea>
+            <textarea id="contact-message" rows="5" required name="message"></textarea>
             <label for="contact-message">Your Message</label>
           </div>
           <button type="submit" class="form-submit">Send Message</button>
