--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- Fixed Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">
+            <a href="./" class="nav-logo">
                 <img src="images/solbek-logo.png" alt="solbek-logo">
             </a>
             
@@ -65,17 +65,24 @@
           <div class="team-grid">
             <div class="team-member hidden">
               <div class="member-photo">
-                <img src="images/PHOTO-2020-03-12-17-11-13.jpg" alt="solomon">
+                <img src="images/solo.jpg" alt="solomon">
               </div>
               <h3>Solomon Peprah Boateng</h3>
               <p>Founder & CEO</p>
             </div>
             <div class="team-member hidden">
               <div class="member-photo">
+                <img src="images/becky.jpg" alt="rebecca">
+              </div>
+              <h3>Rebecca Peprah Boateng</h3>
+              <p>Deputy CEO</p>
+            </div>
+            <div class="team-member hidden">
+              <div class="member-photo">
                 <img src="images/passport-size.png" alt="silwano">
               </div>
               <h3>Silas Peprah Sarpong</h3>
-              <p>Deputy CEO</p>
+              <p>Sales Manager</p>
             </div>
             <div class="team-member hidden">
                 <div class="member-photo">
