--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Fixed Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">
+            <a href="./" class="nav-logo">
                 <img src="images/solbek-logo.png" alt="solbek-logo">
             </a>
             
@@ -95,8 +95,8 @@
         <div class="gallery-frame">
           <!-- Panel 1 -->
           <div class="gallery-panel current-panel">
-            <video class="responsive-video" autoplay muted loop>
-              <source src="images/solbek_site.webm" type="video/webm">
+            <video class="responsive-video" autoplay muted loop playsinline preload="auto" disablepictureinpicture>
+              <source src="images/solbek_site.mp4" type="video/mp4">
             </video>
             </div>
           </div>
