--- a/our_projects.html
+++ b/our_projects.html
@@ -13,7 +13,7 @@
     <!-- Fixed Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="nav-logo">
+            <a href="./" class="nav-logo">
                 <img src="images/solbek-logo.png" alt="solbek-logo">
             </a>
             
