--- a/our_projects.html
+++ b/our_projects.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solbek Properties</title>
-    <link rel="shortcut icon" href="images/solbek-logo.png" type="image/x-icon">
+    <link rel="icon" href="./solbek-logo.png" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="./solbek-logo.png" sizes="180x180"> 
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +15,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="./" class="nav-logo">
-                <img src="images/solbek-logo.png" alt="solbek-logo">
+                <img src="./solbek-logo.png" alt="solbek-logo">
             </a>
             
             <ul class="nav-menu">
@@ -139,7 +140,7 @@
        <footer class="site-footer">
         <div class="footer-container">
           <div class="footer-brand">
-            <img src="images/solbek-logo.png" alt="solbek-logo">
+            <img src="./solbek-logo.png" alt="solbek-logo">
           </div>
           
           <div class="footer-links">
