--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solbek Properties</title>
-    <link rel="shortcut icon" href="images/solbek-logo.png" type="image/x-icon">
+    <link rel="icon" href="./solbek-logo.png" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="./solbek-logo.png" sizes="180x180"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="./" class="nav-logo">
-                <img src="images/solbek-logo.png" alt="solbek-logo">
+                <img src="./solbek-logo.png" alt="solbek-logo">
             </a>
             
             <ul class="nav-menu">
@@ -244,7 +245,7 @@
       <footer class="site-footer">
         <div class="footer-container">
           <div class="footer-brand">
-            <img src="images/solbek-logo.png" alt="solbek-logo">
+            <img src="./solbek-logo.png" alt="solbek-logo">
           </div>
           
           <div class="footer-links">
